# kelshi-trade

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  trivia-game.html
data/: nba_tomorrow_template.csv
docs/: README.md  daily-note-template.md  game-forecast-guardrails-iteration.md  iron-rules.md  morning-workflow.md  nba-paper-runbook.md  nba-pregame-baseline-spec.md  next-step-roadmap.md  paper-system-maturity-roadmap.md  prediction-framework.md
nba-win-prob/: PLAN.md  README.md
nba-win-prob/configs/: base.yaml
nba-win-prob/scripts/: run_baseline.py
nba-win-prob/src/evaluation/: metrics.py
nba-win-prob/tests/: test_schema.py  test_training_table_builder.py
notes/: 2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md
reports/: nba_review_report.csv  nba_review_report.md
reports/live_nba_review/: nba_review_best_per_game.md  nba_review_game.md  nba_review_player_assists_prop.md  nba_review_player_points_prop.md  nba_review_player_rebounds_prop.md  nba_review_player_threes_prop.md  nba_review_report.csv  nba_review_report.md  nba_review_spread.md  nba_review_summary_by_game.md  nba_review_total.md
src/kelshi_trade/: cli.py  config.py  workflow.py
src/nba_win_prob/: config.py  train.py
templates/: nba_game_checklist.md
tests/: test_cli_forecast.py  test_config.py  test_forecasting.py  test_models_and_data.py  test_nba_research.py  test_paper_engine.py  test_reporting.py  test_risk.py  test_workflow.py
(+29 files in other folders)
